@@ -275,6 +275,34 @@ the authentication mechanisms supported by the current implementation.
 </TR>
 
 <TR>
+<TD>mail.smtp.auth.login.disable</TD>
+<TD>boolean</TD>
+<TD>If true, prevents use of the <code>AUTH LOGIN</code> command.
+Default is false.</TD>
+</TR>
+
+<TR>
+<TD>mail.smtp.auth.plain.disable</TD>
+<TD>boolean</TD>
+<TD>If true, prevents use of the <code>AUTH PLAIN</code> command.
+Default is false.</TD>
+</TR>
+
+<TR>
+<TD>mail.smtp.auth.digest-md5.disable</TD>
+<TD>boolean</TD>
+<TD>If true, prevents use of the <code>AUTH DIGEST-MD5</code> command.
+Default is false.</TD>
+</TR>
+
+<TR>
+<TD>mail.smtp.auth.ntlm.disable</TD>
+<TD>boolean</TD>
+<TD>If true, prevents use of the <code>AUTH NTLM</code> command.
+Default is false.</TD>
+</TR>
+
+<TR>
 <TD>mail.smtp.auth.ntlm.domain</TD>
 <TD>String</TD>
 <TD>
